--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=api
-spring.datasource.url=jdbc:postgresql://localhost:5432/tene-app-db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+
+spring.datasource.url=${DATABASE_URL}
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+management.endpoints.web.exposure.include=health,info
+
+server.address=0.0.0.0
+
+spring.profiles.active=prod
