--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,20 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 management.endpoints.web.exposure.include=health,info
+
+visualcrossing.api.key=${VISUAL_CROSSING_API_KEY}
+
+# Liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.drop-first=true
+
+# Meteomatics
+meteomatics.username=${METEOMATICS_USER}
+meteomatics.password=${METEOMATICS_PASS}
