--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DB_USER}
+spring.datasource.username=fly de${DB_USER}
 spring.datasource.password=${DB_PASS}
 
 spring.jpa.hibernate.ddl-auto=none
@@ -19,3 +19,5 @@ spring.liquibase.drop-first=true
 # Meteomatics
 meteomatics.username=${METEOMATICS_USER}
 meteomatics.password=${METEOMATICS_PASS}
+
+server.address=0.0.0.0
