--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,13 +25,7 @@ jobs:
 
       - name: Drop and recreate database
         run: |
-          flyctl ssh console -a tene-db-dev -C "
-          psql -U postgres -c \"
-          SELECT pg_terminate_backend(pid) FROM pg_stat_activity WHERE datname = 'tene_api_dev';
-          DROP DATABASE IF EXISTS tene_api_dev;
-          CREATE DATABASE tene_api_dev;
-          \"
-          "
+          echo "DROP SCHEMA public CASCADE; CREATE SCHEMA public;" | flyctl postgres connect -a tene-db-dev
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
