--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,9 @@
-name: Deploy to Fly.io
+name: Deploy to Elastic Beanstalk
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   deploy:
@@ -14,22 +13,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Java
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Install Flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Build project with Maven Wrapper
+        run: ./mvnw package -DskipTests
 
-      - name: Drop and recreate database
-        run: |
-          echo "DROP SCHEMA public CASCADE; CREATE SCHEMA public;" | flyctl postgres connect -a tene-db-dev
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - name: Create deployment package (ZIP)
+        run: zip -r deploy.zip Dock* .ebextensions target/*.jar
 
-      - name: Deploy to Fly.io
-        run: flyctl deploy --remote-only --config fly.toml
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - name: Deploy to Elastic Beanstalk
+        uses: einaregilsson/beanstalk-deploy@v21
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: tene-api
+          environment_name: tene-api-env
+          version_label: ${{ github.sha }}
+          region: ${{ secrets.AWS_REGION }}
+          deployment_package: deploy.zip
