--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,6 @@ jobs:
           version_label: deploy-${{ github.sha }}-${{ github.run_number }}
           region: ${{ secrets.AWS_REGION }}
           deployment_package: deploy.zip
+          wait_for_deployment: true
+          recovery_wait_time: 30
+          use_existing_version_if_available: true
