--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Create deployment package (ZIP)
         run: zip -r deploy.zip Dockerfile app.jar
 
-      - name: Deploy to Elastic Beanstalk
+      - name: Upload to Elastic Beanstalk (create version only)
         uses: einaregilsson/beanstalk-deploy@v21
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -38,5 +38,20 @@ jobs:
           version_label: deploy-${{ github.sha }}-${{ github.run_number }}
           region: ${{ secrets.AWS_REGION }}
           deployment_package: deploy.zip
+          wait_for_deployment: false
+          use_existing_version_if_available: true
+
+      - name: Wait for EB version to register
+        run: sleep 20
+
+      - name: Deploy application version
+        uses: einaregilsson/beanstalk-deploy@v21
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: tene-api
+          environment_name: tene-api-docker-env
+          version_label: deploy-${{ github.sha }}-${{ github.run_number }}
+          region: ${{ secrets.AWS_REGION }}
           wait_for_deployment: true
           use_existing_version_if_available: true
