--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,30 +28,26 @@ jobs:
       - name: Create deployment package (ZIP)
         run: zip -r deploy.zip Dockerfile app.jar
 
-      - name: Upload to Elastic Beanstalk (create version only)
-        uses: einaregilsson/beanstalk-deploy@v21
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: tene-api
-          environment_name: tene-api-docker-env
-          version_label: deploy-${{ github.sha }}-${{ github.run_number }}
-          region: ${{ secrets.AWS_REGION }}
-          deployment_package: deploy.zip
-          wait_for_deployment: false
-          use_existing_version_if_available: true
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Wait for EB version to register
-        run: sleep 20
+      - name: Upload application version
+        run: |
+          aws elasticbeanstalk create-application-version \
+            --application-name tene-api \
+            --version-label deploy-${{ github.sha }}-${{ github.run_number }} \
+            --source-bundle S3Bucket=elasticbeanstalk-${{ secrets.AWS_REGION }}-$(aws sts get-caller-identity --query Account --output text),S3Key=/tene-api/deploy-${{ github.sha }}-${{ github.run_number }}.zip \
+            --process
 
-      - name: Deploy application version
-        uses: einaregilsson/beanstalk-deploy@v21
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: tene-api
-          environment_name: tene-api-docker-env
-          version_label: deploy-${{ github.sha }}-${{ github.run_number }}
-          region: ${{ secrets.AWS_REGION }}
-          wait_for_deployment: true
-          use_existing_version_if_available: true
+      - name: Wait for AWS to register version
+        run: sleep 40
+
+      - name: Update Elastic Beanstalk environment
+        run: |
+          aws elasticbeanstalk update-environment \
+            --environment-name tene-api-docker-env \
+            --version-label deploy-${{ github.sha }}-${{ github.run_number }}
