Set up Elastic Beanstalk deploy

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,22 +1,17 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      java: corretto21
-      docker: 20
-    commands:
-      - chmod +x mvnw || true
   pre_build:
     commands:
+      - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 149696705324.dkr.ecr.eu-west-1.amazonaws.com
   build:
     commands:
+      - echo Build started on `date`
+      - ./mvnw clean package -DskipTests
       - docker build -t tene-api .
       - docker tag tene-api:latest 149696705324.dkr.ecr.eu-west-1.amazonaws.com/tene-api:latest
   post_build:
     commands:
+      - echo Pushing the Docker image...
       - docker push 149696705324.dkr.ecr.eu-west-1.amazonaws.com/tene-api:latest
-artifacts:
-  files:
-    - imagedefinitions.json
