--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,16 +4,25 @@ phases:
   install:
     runtime-versions:
       java: corretto21
+    commands:
+      - echo Installing tools...
+      - apt-get update && apt-get install -y jq awscli
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 149696705324.dkr.ecr.eu-west-1.amazonaws.com
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=$COMMIT_HASH
   build:
     commands:
       - echo Build started on `date`
-      - docker build -t tene-api .
-      - docker tag tene-api:latest 149696705324.dkr.ecr.eu-west-1.amazonaws.com/tene-api:latest
+      - docker build -t tene-api:$IMAGE_TAG .
+      - docker tag tene-api:$IMAGE_TAG 149696705324.dkr.ecr.eu-west-1.amazonaws.com/tene-api:$IMAGE_TAG
   post_build:
     commands:
       - echo Pushing the Docker image...
-      - docker push 149696705324.dkr.ecr.eu-west-1.amazonaws.com/tene-api:latest
+      - docker push 149696705324.dkr.ecr.eu-west-1.amazonaws.com/tene-api:$IMAGE_TAG
+      - echo Updating ECS service...
+      - aws ecs update-service --cluster tene-api-cluster --service tene-api-service --force-new-deployment --region eu-west-1
+artifacts:
+  files: '**/*'
